tests/urmoac/errors/net_issues/edge_vmax_0_multiple_log/neterrors_output.urmoac
speed<=0;10000
speed<=0;10002
